# PROJ_TRACKING_PROB

./: '  .gitignore  .gitmodules  CMakeLists.txt  SETTINGS_PATH.h  UTILITIES  \  cmake_install.cmake  code_storage.txt  controller_process_class.cpp  controller_process_class.h  main.cpp  stream_video_rtsp.cpp  stream_video_rtsp.h  tags
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
AIMING_MODULES/: aiming_class.cpp  aiming_class.h  aiming_monitoring_module.h  nodes_track_approximation.cpp  nodes_track_approximation.h  pid_class.cpp  pid_class.h  pid_param_struct.h  rotate_vector_class.cpp  rotate_vector_class.h
AIM_IMAGE_IMITATION/: AimImageImitatorClass.cpp  AimImageImitatorClass.h  imitator_image_aim.cpp  imitator_image_aim.h  sinus_generator_class.cpp  sinus_generator_class.h  widget_sinus_source.cpp  widget_sinus_source.h  widget_sinus_source.ui
BACKUP/UTILITIES_OLD/: engine_keyfilter.cpp  engine_statistics.cpp  engine_statistics.h  module_period_measure.h  register_settings.cpp  sinus_generator_class.h
CAMERA_INTERFACE/: CameraInterfaceClass.cpp  CameraInterfaceClass.h  camera_control_interface.h  camera_image_storage.h  camera_interface_class.cpp  camera_interface_class.h  interface_camera_hik.cpp  interface_camera_hik.h  interface_camera_rtsp.cpp  interface_camera_rtsp.h  interface_image_source.cpp  interface_image_source.h
COMMON/: interface_image_source.cpp  interface_image_source.h  interface_pass_coord.cpp  interface_pass_coord.h  interface_pass_image.cpp  interface_pass_image.h  interface_pass_value.cpp  interface_pass_value.h  module_period_measure.h  state_block_enum.h  type_block_enum.h  utilite.cpp  utilite.h
CV_IMAGE_PROCESSING/: CVImageProcessing.cpp  CVImageProcessing.h  contour_processing.cpp  contour_processing.h  cv_image_processing.cpp  cv_image_processing.h  filter_blotch.cpp  filter_blotch.h  image_estimations.cpp  image_estimations.h  image_finder.cpp  image_finder.h  image_processing_node.cpp  image_processing_node.h  optimization_threshold.cpp  optimization_threshold.h  tracker_centroid.cpp  tracker_centroid.h  tracker_neural.cpp  tracker_neural.h  tracker_template.cpp  tracker_template.h
CV_IMAGE_PROCESSING/TRACKER_ROBUST/: Tracker.cpp  Tracker.h
DEVICES/: EngineControlClass.cpp  device_focus_ranger_interface.h  device_generic_interface.h  device_laser_interface.h  device_lid_interface.h  device_rotary_interface.cpp  device_rotary_interface.h  scanator_control_class.cpp  scanator_control_class.h
DEVICES/BACKUP/: device_rotary_interface.h
DEVICES/LaserPointerControlLib/: LaserCommandStructures.h  WindowLaserControl.h
IMAGE_PROCESSING/: contour_processing.cpp  contour_processing.h  engine_statistics_track.h  filter_blotch.cpp  filter_blotch.h  finder_moving_centroid.cpp  finder_moving_centroid.h  image_finder.cpp  image_finder.h  image_processing_node.cpp  image_processing_node.h  optimization_threshold.cpp  optimization_threshold.h  tracker_centroid.cpp  tracker_centroid.h  tracker_template.cpp  tracker_template.h
IMAGE_PROCESSING/TRACKER_ROBUST/: Tracker.cpp  Tracker.h
PYTORCH_PROCESSING/: CMakeLists.txt  TorchProcessing.cpp  TorchProcessing.h  TorchProcessing_global.h
ROTATE_OPTIMIZATION/: rotation_find_executor.cpp  rotation_find_executor.h
ROTATE_OPTIMIZATION/RotationContainerLib/: CMakeLists.txt  DebugStream.h  PassTwoCoordClass.h  RotateOperationContainer.cpp  RotateOperationContainer.h  RotateOptimization_global.h  SubstractPair.h
TRANSMISSION/DATA_STRUCTURES/: engine_type_register.cpp  engine_type_register.h  laser_control_command.h  message_command_id.h  message_command_structures.cpp  message_command_structures.h
TRANSMISSION/EMBEDED_RING_BUFFER/: engine_ring_buffer_dense.h  engine_ring_buffer_generic.h  message_dispatcher_generic.h  message_iterator_generic.h
TRANSMISSION/GENERIC_MESSAGES/: message_header_generic.h  message_header_generic_ext.h  message_struct_generic.h  message_struct_generic_ext.h
TRANSMISSION/RING_BUFFER_ADAPTERS/: message_dispatcher_app.h  message_dispatcher_generic.h
UTILITES/: DebugOutputFilter.cpp  DebugOutputFilter.h  SettingsEngine.cpp  SettingsEngine.h  debug_output_filter.cpp  debug_output_filter.h  engine_keyfilter.h  engine_statistics.cpp  engine_statistics.h  register_settings.cpp  register_settings.h  sinus_generator_class.cpp  thread_nodes_list.h  thread_operation_nodes.h  transform_coord_class.cpp  transform_coord_class.h
dump_dir/: CurrentDesktop  Date  ExecutablePath  ExecutableTimestamp  ProcCmdline  ProcCwd  ProcEnviron  ProcMaps  ProcStatus  Uname  UserGroups
gui_files/: pictures.qrc  widget_aiming_control.ui  widget_camera_control.ui  widget_container_group.ui  widget_imitator_control.ui  widget_main_window.ui  widget_output_image_display.ui  widget_output_text_display.ui  widget_process_controller.ui  widget_processing_image_control.ui  widget_processing_image_generic.ui  widget_scanator_control.ui  widget_table_group.ui  widget_transmission_interface.ui
gui_sources/: AdjustableWidget.cpp  AdjustableWidget.h  DisplayWidget.cpp  DisplayWidget.h  OutputImageDisplayClass.cpp  OutputImageDisplayClass.h  OutputTextDisplayClass.cpp  OutputTextDisplayClass.h  graphicwidgetnode.cpp  graphicwidgetnode.h  labelimage.cpp  labelimage.h  link_line.cpp  link_line.h  mainwindowclass.cpp  mainwindowclass.h  node.cpp  node.h  widget_adjustable.cpp  widget_adjustable.h  widget_aiming_control.cpp  widget_aiming_control.h  widget_camera_control.cpp  widget_camera_control.h  widget_container_group.cpp  widget_container_group.h  widget_device_control.cpp  widget_device_control.h  widget_imitator_control.cpp  widget_imitator_control.h  widget_main_window.cpp  widget_main_window.h  widget_output_image_display.cpp  widget_output_image_display.h  widget_output_text_display.cpp  widget_output_text_display.h  widget_process_controller.cpp  widget_process_controller.h  widget_processing_image_control.cpp  widget_processing_image_control.h  (+10 more)
include/: CommonHeaders.h
ui_files/: DisplayWidget.ui  OutputImageDisplay.ui  OutputTextDisplay.ui  mainblockwindow.ui  mainwindowclass.ui
(+15 files in other folders)
